src/objects/Account_Rep_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Account ID from Salesforce</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Rep Assignments</relationshipLabel>
        <relationshipName>Account_Rep_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acct_Sales_Order_Block__c</fullName>
        <description>Account Sales Order Block Code from SAP</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Acct Sales Order Block</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Qualification__c</fullName>
        <description>Brand Qualification from SAP</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand Qualification</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Manager_Name__c</fullName>
        <description>Sales Rep&apos;s District Manager Name from SAP</description>
        <encryptionScheme>None</encryptionScheme>
        <label>District Manager Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Manager__c</fullName>
        <description>District Manager SAP Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>District Manager</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Group_Code__c</fullName>
        <description>Brand or Marketing Group Code from SAP</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand/Marketing Group Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Group_Description__c</fullName>
        <description>Brand or Marketing Group Description from SAP</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand/Marketing Group Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RVP_Name__c</fullName>
        <description>Sales Rep&apos;s Regional Vice President Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>RVP Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Vice_President__c</fullName>
        <description>Sales Rep&apos;s Regional Vice President SAP Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Regional Vice President</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Last_Updated_Date__c</fullName>
        <description>Date record was last updated in SAP</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <description>SAP Sales Organization Code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Org</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name__c</fullName>
        <description>Sales Rep Name from SAP</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Rep Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <description>Sales Rep SAP Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Rep</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_MDM_Account_Key__c</fullName>
        <description>Sold To MDM Account Key</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Sold To MDM Account Key</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_MDM_Location_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Sold To MDM Location Key</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <description>SAP Sold To SAP Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sold To</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Account Rep Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_ID__c</columns>
        <columns>Sales_Org__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Sales_Rep_Name__c</columns>
        <columns>Marketing_Group_Description__c</columns>
        <columns>District_Manager_Name__c</columns>
        <columns>RVP_Name__c</columns>
        <columns>SAP_Last_Updated_Date__c</columns>
        <columns>Sold_To__c</columns>
        <columns>Sold_To_MDM_Account_Key__c</columns>
        <columns>Sold_To_MDM_Location_Key__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Barb_Query_by_Brand</fullName>
        <columns>Sales_Org__c</columns>
        <columns>Sold_To__c</columns>
        <columns>Sold_To_MDM_Location_Key__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Sales_Rep_Name__c</columns>
        <columns>District_Manager__c</columns>
        <columns>District_Manager_Name__c</columns>
        <columns>RVP_Name__c</columns>
        <columns>Account_ID__c</columns>
        <columns>Marketing_Group_Code__c</columns>
        <columns>Marketing_Group_Description__c</columns>
        <columns>SAP_Last_Updated_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Regional_Vice_President__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Marketing_Group_Code__c</field>
            <operation>equals</operation>
            <value>DK</value>
        </filters>
        <label>Barb -Query by Brand</label>
        <sharedTo>
            <group>LOB_Admin_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Barb_Query_by_Rep</fullName>
        <columns>Sales_Org__c</columns>
        <columns>Sold_To__c</columns>
        <columns>Sold_To_MDM_Location_Key__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Sales_Rep_Name__c</columns>
        <columns>District_Manager__c</columns>
        <columns>District_Manager_Name__c</columns>
        <columns>RVP_Name__c</columns>
        <columns>Account_ID__c</columns>
        <columns>Marketing_Group_Code__c</columns>
        <columns>Marketing_Group_Description__c</columns>
        <columns>SAP_Last_Updated_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Regional_Vice_President__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Rep__c</field>
            <operation>equals</operation>
            <value>1667659</value>
        </filters>
        <filters>
            <field>Marketing_Group_Description__c</field>
            <operation>equals</operation>
            <value>Altair</value>
        </filters>
        <label>Barb -Query by Rep</label>
        <sharedTo>
            <group>LOB_Admin_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Barb_Query_by_Rep_Allure</fullName>
        <columns>Sales_Org__c</columns>
        <columns>Sold_To__c</columns>
        <columns>Sold_To_MDM_Account_Key__c</columns>
        <columns>Sold_To_MDM_Location_Key__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Sales_Rep_Name__c</columns>
        <columns>District_Manager__c</columns>
        <columns>District_Manager_Name__c</columns>
        <columns>RVP_Name__c</columns>
        <columns>Account_ID__c</columns>
        <columns>Marketing_Group_Code__c</columns>
        <columns>Marketing_Group_Description__c</columns>
        <columns>SAP_Last_Updated_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Rep__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Marketing_Group_Description__c</field>
            <operation>equals</operation>
            <value>Allure</value>
        </filters>
        <label>Barb -Query by Rep Allure</label>
        <sharedTo>
            <group>LOB_Admin_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bebe_Hybrid_Reps</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Account_ID__c</columns>
        <columns>Sales_Org__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Marketing_Group_Code__c</columns>
        <columns>Marketing_Group_Description__c</columns>
        <columns>Sales_Rep_Name__c</columns>
        <columns>District_Manager_Name__c</columns>
        <columns>RVP_Name__c</columns>
        <columns>SAP_Last_Updated_Date__c</columns>
        <columns>Sold_To__c</columns>
        <columns>Sold_To_MDM_Account_Key__c</columns>
        <columns>Sold_To_MDM_Location_Key__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Rep__c</field>
            <operation>equals</operation>
            <value>2363158</value>
        </filters>
        <filters>
            <field>Sales_Rep__c</field>
            <operation>equals</operation>
            <value>1500108</value>
        </filters>
        <label>Bebe Hybrid Reps</label>
    </listViews>
    <listViews>
        <fullName>Query_by_Account</fullName>
        <columns>Sales_Org__c</columns>
        <columns>Sold_To__c</columns>
        <columns>Sold_To_MDM_Account_Key__c</columns>
        <columns>Sold_To_MDM_Location_Key__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Sales_Rep_Name__c</columns>
        <columns>District_Manager__c</columns>
        <columns>District_Manager_Name__c</columns>
        <columns>RVP_Name__c</columns>
        <columns>Account_ID__c</columns>
        <columns>Marketing_Group_Code__c</columns>
        <columns>Marketing_Group_Description__c</columns>
        <columns>SAP_Last_Updated_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sold_To_MDM_Account_Key__c</field>
            <operation>equals</operation>
            <value>431665</value>
        </filters>
        <filters>
            <field>Sold_To_MDM_Location_Key__c</field>
            <operation>equals</operation>
            <value>594434</value>
        </filters>
        <filters>
            <field>Marketing_Group_Description__c</field>
            <operation>equals</operation>
            <value>ALTAIR</value>
        </filters>
        <label>Query by Account</label>
    </listViews>
    <listViews>
        <fullName>Query_by_Rep</fullName>
        <columns>Sales_Org__c</columns>
        <columns>Sold_To__c</columns>
        <columns>Sold_To_MDM_Account_Key__c</columns>
        <columns>Sold_To_MDM_Location_Key__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Sales_Rep_Name__c</columns>
        <columns>District_Manager__c</columns>
        <columns>District_Manager_Name__c</columns>
        <columns>RVP_Name__c</columns>
        <columns>Account_ID__c</columns>
        <columns>Marketing_Group_Code__c</columns>
        <columns>Marketing_Group_Description__c</columns>
        <columns>SAP_Last_Updated_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Rep__c</field>
            <operation>contains</operation>
            <value>1667659</value>
        </filters>
        <label>Query by Rep</label>
        <sharedTo>
            <group>LOB_Admin_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Account Rep Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Rep Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>